# playground

./: .gitignore  README.md  justfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
python/: app.py  physics.wit
sim/: README.md  app.py  physics.wit  pyproject.toml
sim/scripts/: build.sh
webui/: index.html
